# python-sdk

./: README.md  example.py  pyproject.toml
lix_sdk/: __init__.py  client.py  dto.py  exceptions.py
lix_sdk/http/: api_client.py
lix_sdk/resources/: groups.py  links.py  profile.py
tests/: mock_session.py  test_exceptions.py
tests/groups/: test_create_group.py  test_delete_group.py  test_get_group.py  test_get_groups.py  test_update_group.py
tests/links/: test_create_link.py  test_delete_link.py  test_get_link.py  test_get_links.py  test_update_link.py
tests/profile/: test_profile.py
