[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lix-sdk"
version = "0.1.0"
description = "Official Python SDK for the Lix.li API."
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = [   
    "lix",
    "url-shortening",
    "url-shortener",
    "link-shortener",
    "link-management",
    "link-analytics",
    "analytics",
    "api",
    "sdk"
]
dependencies = [
    "requests>=2.28.0",
]
authors = [
  {name = "Lix.li"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://lix.li"
Repository = "https://github.com/lix-url/python-sdk"
Issues = "https://github.com/lix-url/python-sdk/issues"
Documentation = "https://lix.li/api"

[tool.pytest.ini_options]
testpaths = ["tests"]

